k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 3tier-backend
  template:
    metadata:
      labels:
        app: 3tier-backend
    spec:
      containers:
        - name: backend
          image: "abhi-infra/backend:latest"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: 3tier-backend
