k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 3tier-frontend
  template:
    metadata:
      labels:
        app: 3tier-frontend
    spec:
      containers:
        - name: frontend
          image: "abhi-infra/frontend:latest"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: 3tier-frontend
